assets/css/app.css
@charset "UTF-8";

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


html {
    font-family: serif;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    -webkit-text-size-adjust: 100%;
}


/* Button */

button {
    display: inline-block;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border: 0;
    padding: 0;
    border-radius: 0;
    background: 0 0;
}

button,
input,
optgroup,
select,
textarea {
    color: inherit;
    font: inherit;
    margin: 0
}

button {
    overflow: visible
}

button,
select {
    text-transform: none
}

button,
html input[type=button],
input[type=reset],
input[type=submit] {
    -webkit-appearance: button;
    cursor: pointer
}

button[disabled],
html input[disabled] {
    cursor: default
}

button::-moz-focus-inner,
input::-moz-focus-inner {
    border: 0;
    padding: 0
}

input#search {
    -webkit-appearance: none;
    -webkit-border-radius: 0px;
    margin: 0;
    padding: 0;
    border: 0;
}

*,
*::after,
*::before {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

*:focus,
*:visited,
*:active,
*:hover {
    outline: 0 !important;
}

*::-moz-focus-inner {
    border: 0;
}

::-moz-selection {
    background: #000;
    color: #FFF;
}

::selection {
    background: #000;
    color: #FFF;
}


input {
    line-height: normal;
}

input[type=checkbox],
input[type=radio] {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    height: auto;
}

input[type=search] {
    -webkit-appearance: textfield;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
}

input {
    color: #000;
    border: 0;
    text-align: center;
    background: 0 0;
    line-height: 1;
    border-radius: 0;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

input[type=search]::-webkit-search-decoration {
    -webkit-appearance: none;
}

::-webkit-input-placeholder {
    /* WebKit, Blink, Edge */
    color: grey;
    font-style: italic;
}

:-moz-placeholder {
    /* Mozilla Firefox 4 to 18 */
    color: grey;
    font-style: italic;
    opacity: 1;
}

::-moz-placeholder {
    /* Mozilla Firefox 19+ */
    color: grey;
    font-style: italic;
    opacity: 1;
}

:-ms-input-placeholder {
    /* Internet Explorer 10-11 */
    color: grey;
    font-style: italic;
}

svg:not(:root) {
    overflow: hidden;
}

/* Fonts*/

:root {
    font-size: 23.5px;
}

@media (min-width: 1441px) {
    :root {
            font-size: 25px;
        }
}

@media print {
    :root {
        font-size: 14.684pt;
    }
}


/* General*/

body {
    font: 0.681rem/1rem 'Lyon Text Web', Times New Roman, Georgia, serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-feature-settings: "onum", "liga";
    -webkit-font-feature-settings: "onum", "liga";
    -moz-font-feature-settings: "onum", "liga";
    -ms-font-feature-settings: "onum", "liga";
    font-variant: oldstyle-nums, common-ligatures;
    color: #000;
    font-weight: 400;
}

@font-face {
    font-family: 'Lyon Text Web';
    src: url('../fonts/LyonText-RegularItalic-Web.eot');
    src: url('../fonts/LyonText-RegularItalic-Web.eot?#iefix') format('embedded-opentype'), url('../fonts/LyonText-RegularItalic-Web.woff2') format('woff2'), url('../fonts/LyonText-RegularItalic-Web.woff') format('woff');
    font-weight: 400;
    font-style: italic;
    font-stretch: normal;
}

@font-face {
    font-family: 'Lyon Text Web';
    src: url('../fonts/LyonText-Regular-Web.eot');
    src: url('../fonts/LyonText-Regular-Web.eot?#iefix') format('embedded-opentype'), url('../fonts/LyonText-Regular-Web.woff2') format('woff2'), url('../fonts/LyonText-Regular-Web.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-stretch: normal;
}

a {
    color: #000;
    text-decoration: none;
}

em {
    font-style: italic;
}

sup {
    position: relative;
    vertical-align: 0;
    bottom: 0.25rem;
    font-size: 85%;
}

.tab {
    font-feature-settings: "tnum", "onum";
    -webkit-font-feature-settings: "tnum", "onum";
    -moz-font-feature-settings: "tnum", "onum";
    -ms-font-feature-settings: "tnum", "onum";
    font-variant-numeric: tabular-nums, oldstyle-nums;
}

.sc, strong {
    text-transform: lowercase;
    letter-spacing: 0.03rem;
    font-feature-settings: "smcp";
    -webkit-font-feature-settings: "smcp";
    -moz-font-feature-settings: "smcp";
    -ms-font-feature-settings: "smcp";
    font-variant-caps: small-caps;
}

/* Type sizes */

.heading {
    font-size: 1.191rem;
    line-height: 1.2;
    letter-spacing: -0.01rem;
}

@media (max-width:480px) {
    .heading {
        font-size: 0.851rem;
        line-height: 1.3;
    }
}
.text-large,
.article-introduction-text,
h6,
.subheading{
    font-size: 0.766rem;
    line-height: 1.45
}
/* ... */

